# openair-3-mcp-server-oss

./: .env.example  .gitignore  CLAUDE.md  LICENSE  NOTICE.md  README.md  check_integrations.py  pyproject.toml  server.py
.github/workflows/: r-smoke.yml  test.yml
docs/: VALIDATION.md
fixtures/: felisa_munarriz_wind.csv  sample_hourly.csv  sample_spain_hourly.csv
openair_mcp/: __init__.py  contracts.py  datetime_parse.py  export_bridge.py  prepare.py  r_bridge.py  smoke_fixtures.py  text_encoding.py  time_grid.py  utils.py
r/: README.md
r/common/: series_df.R  summary_fallback.R
r/scripts/: aq_stats.R  calc_percentile.R  calendar_plot.R  conditional_quantile.R  cor_plot.R  import_adms.R  import_aurn.R  import_aurn_csv.R  import_europe.R  import_meta.R  import_traj.R  import_ukaq.R  mod_stats.R  percentile_rose.R  polar_annulus.R  polar_cluster.R  polar_diff.R  polar_freq.R  polar_plot.R  pollution_rose.R  rolling_mean.R  rolling_quantile.R  scatter_plot.R  smooth_trend.R  summary_plot.R  taylor_diagram.R  theil_sen.R  time_average.R  time_plot.R  time_prop.R  time_variation.R  traj_cluster.R  traj_level.R  traj_plot.R  trend_level.R  variation_plot.R  wind_rose.R
schemas/: artifact.v1.json  series.v1.json
scripts/: export_local_series.py  inject_real_wind.py
tests/: test_export_bridge.py  test_ingest_utils.py  test_prepare.py  test_text_encoding.py  test_time_grid.py
