[project]
name = "openair-3-mcp"
version = "0.1.0"
description = "MCP server wrapping the R openair package for air quality analysis"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "fastmcp>=3.0.0,<4",
    "pydantic>=2.0",
    "python-dotenv>=1.0.0",
    "openpyxl>=3.1.0",
    "tzdata>=2024.1; sys_platform == 'win32'",
]

[project.optional-dependencies]
dev = ["pytest>=8.0", "ruff>=0.4"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["openair_mcp"]

[tool.ruff]
line-length = 100
target-version = "py311"
